--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.3.0",
+    "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
