--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.21.2",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "typed-redux-saga": "^1.5.0"
   },
