--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "redux-saga-test-plan": "^4.0.6",
     "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
