--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
