--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "redux-saga-test-plan": "^4.0.6",
+    "socket.io-client": "^4.7.5",
     "typed-redux-saga": "^1.5.0"
   },
   "devDependencies": {
